OMP identifiserer delvis avslag